// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeldHistoryArea changes state correctly 1`] = `
<section class="held-history-container">
  <div class="held-history-container__header">
    <p class="held-history-container__header__title">Held Amount History</p>
    <div class="held-history-container__header__selection-area"><button name="Select All Stats" class="held-history-container__header__selection-area__item">
        <p class="held-history-container__header__selection-area__item__label">
          All Stats
        </p>
      </button> <button name="Select Monthly Breakdown" class="held-history-container__header__selection-area__item active">
        <p class="held-history-container__header__selection-area__item__label">
          Monthly Breakdown
        </p>
      </button></div>
  </div>
  <div class="held-history-container__divider"></div>
  <heldhistorymonthlybreakdowntable-stub></heldhistorymonthlybreakdowntable-stub>
</section>
`;

exports[`HeldHistoryArea changes state correctly 2`] = `
<section class="held-history-container">
  <div class="held-history-container__header">
    <p class="held-history-container__header__title">Held Amount History</p>
    <div class="held-history-container__header__selection-area"><button name="Select All Stats" class="held-history-container__header__selection-area__item active">
        <p class="held-history-container__header__selection-area__item__label">
          All Stats
        </p>
      </button> <button name="Select Monthly Breakdown" class="held-history-container__header__selection-area__item">
        <p class="held-history-container__header__selection-area__item__label">
          Monthly Breakdown
        </p>
      </button></div>
  </div>
  <div class="held-history-container__divider"></div>
  <heldhistoryallstatstable-stub></heldhistoryallstatstable-stub>
</section>
`;

exports[`HeldHistoryArea renders correctly 1`] = `
<section class="held-history-container">
  <div class="held-history-container__header">
    <p class="held-history-container__header__title">Held Amount History</p>
    <div class="held-history-container__header__selection-area"><button name="Select All Stats" class="held-history-container__header__selection-area__item active">
        <p class="held-history-container__header__selection-area__item__label">
          All Stats
        </p>
      </button> <button name="Select Monthly Breakdown" class="held-history-container__header__selection-area__item">
        <p class="held-history-container__header__selection-area__item__label">
          Monthly Breakdown
        </p>
      </button></div>
  </div>
  <div class="held-history-container__divider"></div>
  <heldhistoryallstatstable-stub></heldhistoryallstatstable-stub>
</section>
`;
